helm/traefik/extra/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: traefik
  name: traefik-dashboard-auth
spec:
  basicAuth:
    secret: traefik-dashboard-auth-secret
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: traefik
  name: traefik-dashboard-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.kalexlab.xyz`)
      middlewares:
        - name: traefik-dashboard-auth
      services:
        - kind: TraefikService
          name: api@internal
  tls:
    secretName: traefik-ingress-certificate-secret
